[project]
name = "feet-pics-display"
version = "0.1.0"
description = ""
authors = [
    {name = "Graham Dudik",email = "graham.dudik@athletic.net"}
]
readme = "README.md"
requires-python = ">=3.11.9, <=3.11.14"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "zeroconf (>=0.148.0,<0.149.0)",
    "qrcode[pil] (>=8.2,<9.0)"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.19.0"

